ui/foundation/components/form/index.scss
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. */

@use "helpers";

@use "input";

.fdn-form {
	display: flex;
	flex-direction: column;
	gap: 2rem;
	padding-block: 2rem;
}

.fdn-field {
	display: flex;
	flex-direction: column;
	width: auto;
	row-gap: 0.8rem;
}

.fdn-field label {
	display: flex;
	align-items: center;
	height: 100%;
	font-weight: 500;
	font-size: 1rem;
	padding-inline-end: 0.8rem;
}

.fdn-field .fdn-input-error {
	display: none;
	visibility: hidden;
	line-height: 1.5;
	color: var(--fdn-error-colour);
	font-weight: 500;
}

.fdn-field .fdn-input {
	border: 2px solid var(--border-color, var(--fdn-border-colour));
	border-radius: 1.5rem;
	display: flex;
	height: var(--max-height);
	width: 100%;
	max-height: var(--max-height);
	min-height: var(--max-height);
	position: relative;
	overflow: hidden;
}

.fdn-input .fdn-input-prefix,
.fdn-input .fdn-input-suffix {
	display: flex;
	height: 100%;
	justify-content: center;
	align-items: center;
	font-weight: 500;
}

.fdn-input .fdn-input-prefix {
	border-right: 2px solid
		var(--border-color, var(--fdn-border-colour));
	padding-inline-start: 1rem;
	padding-inline-end: 0.925rem;
}

.fdn-input .fdn-input-suffix {
	border-left: 2px solid
		var(--border-color, var(--fdn-border-colour));
	padding-inline-end: 1rem;
	padding-inline-start: 0.925rem;
}

select.fdn-internal-input {
	padding-inline-end: 3rem;
}

select.fdn-internal-input + .fdn-input-suffix {
	position: absolute;
	right: 0;
}

.fdn-field[data-type="radio"] {
	flex-direction: row;
	align-items: center;
}

.fdn-field[data-type="radio"] .fdn-input {
	min-width: calc(var(--max-height) - 1rem);
	max-height: calc(var(--max-height) - 1rem);
	max-width: calc(var(--max-height) - 1rem);
	min-height: calc(var(--max-height) - 1rem);
}

.fdn-internal-input[type="radio"],
.fdn-internal-input[type="checkbox"] {
	padding-inline: 0;
}

.fdn-internal-input[type="radio"]::before {
	content: "";
	position: absolute;
	top: 0;
	left: 0;
	display: flex;
	width: 100%;
	height: 100%;
	background-color: var(--fdn-colours-blue);
	border-radius: 2rem;
	transform: scale(0);
	transform-origin: center center;
	transition: 0.05s transform;
}

.fdn-internal-input[type="radio"]:checked::before {
	transform: scale(0.5);
}

.fdn-field:hover .fdn-input {
	--border-color: var(--fdn-border-secondary-colour);
}

